# gkl-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
benches/: pairhmm.rs  smithwaterman.rs
gkl/pairhmm/: avx-pairhmm-template.h  avx512_impl.cc  avx512_impl.h  avx_impl.cc  avx_impl.h
gkl/smithwaterman/: PairWiseSW.h
src/: lib.rs  pairhmm.rs  smithwaterman.rs  vector.rs
tests/: pairhmm.rs  smithwaterman.rs
