[package]
name = "gkl"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/philipc/gkl-rs"
description = "Genomics Kernel Library"

[dependencies]

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "pairhmm"
harness = false
