[package]
name = "gkl"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/philipc/gkl-rs"
description = "Genomics Kernel Library"

[dependencies]
cfg-if = "1.0"
lazy_static = "1.3.0"
num-traits = "0.2.14"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.3"

[features]
# Use nightly rustc SIMD features.
# This enables support for AVX-512.
nightly = []

# Enable C++ implementations for PairHMM algorithms.
# This is usually only useful for comparison.
c = ["c-avx", "c-avx512"]

# Enable C++ AVX implementations for PairHMM algorithms.
# This is usually only useful for comparison.
c-avx = ["c-core"]

# Enable C++ AVX-512 implementations for PairHMM algorithms.
# This enables support for AVX-512 without requiring nightly rustc features.
c-avx512 = ["c-core"]

# Internal use.
c-core = []

[profile.release]
debug = true

[[bench]]
name = "pairhmm"
harness = false
